# TaskManager

./: .README.txt.swp  Cargo.toml  README.md  README.txt  sort.rs
TaskManagerCMD/: Cargo.toml
TaskManagerCMD/src/: main.rs
TaskManagerGUI/: Cargo.toml  README.txt
TaskManagerGUI/src/: main.rs
Tree/: Cargo.toml
Tree/src/: main  main.rs
src/: main.rs
